--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.9.7",
     "@nuxtjs/dotenv": "^1.4.0",
-    "nuxt": "^2.12.2"
+    "nuxt": "^2.12.2",
+    "nuxt-svg-loader": "^1.2.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^1.4.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "html-loader": "^1.1.0",
     "prettier": "^2.0.4"
   }
 }
