--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "html-loader": "^1.2.1",
-    "prettier": "^2.0.5"
+    "prettier": "^2.1.0",
+    "webpack-bundle-analyzer": "^3.8.0"
   }
 }
