--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.12.1",
-    "@nuxtjs/dotenv": "^1.4.0",
+    "@nuxtjs/markdownit": "^1.2.10",
+    "highlight.js": "^10.1.2",
+    "markdown-it": "^11.0.0",
+    "markdown-it-attrs": "^2.4.1",
+    "markdown-it-div": "^1.1.0",
     "nuxt": "^2.14.3",
     "nuxt-svg-loader": "^1.2.0"
   },
@@ -20,7 +23,7 @@
     "@nuxtjs/tailwindcss": "^1.4.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "html-loader": "^1.2.1",
+    "html-loader": "^1.3.0",
     "prettier": "^2.1.0",
     "webpack-bundle-analyzer": "^3.8.0"
   }
