added new blog post in progress

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
         "*.css": "postcss"
-    }
+    },
+    "python.pythonPath": "C:\\Users\\jmaclvor\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe"
 }
