--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@nuxtjs/feed": "^2.0.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "d3": "^6.2.0",
+    "invariant": "^2.2.4",
+    "levenary": "^1.1.1",
     "nuxt": "^2.14.7",
     "nuxt-svg-loader": "^1.2.0",
     "remark-bracketed-spans": "^3.0.0",
