--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-embed-gist": "^1.1.0"
   },
   "devDependencies": {
+    "@nuxtjs/cloudinary": "^1.0.2",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/tailwindcss": "^3.2.0",
     "cross-env": "^7.0.2",
