--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.3.0",
     "html-loader": "^1.3.2",
-    "prettier": "^2.2.1",
-    "webpack-bundle-analyzer": "^3.9.0"
+    "prettier": "^2.2.1"
   }
 }
